public/css/style.css
/* Generated by Font Squirrel (http://www.fontsquirrel.com) on April 9, 2013 */
@font-face {
    font-family: 'hillel_clmmedium';
    src: url('hillelclm-medium-webfont.eot');
    src: url('hillelclm-medium-webfont.eot?#iefix') format('embedded-opentype'),
         url('hillelclm-medium-webfont.woff') format('woff'),
         url('hillelclm-medium-webfont.ttf') format('truetype'),
         url('hillelclm-medium-webfont.svg#hillel_clmmedium') format('svg');
    font-weight: normal;
    font-style: normal;
}
body {
  overflow-x: hidden;
  direction: rtl;
  font-family: 'hillel_clmmedium', sans-serif;
  font-size: 15px;
}
#about {
  padding-bottom: 0;
}
.navbar-brand {
  float: right;
}
#item-social-fb a {
  margin-left: 10px;
  margin-right: 10px;
}
#item-social-twitter a,
#item-social-fb a {
  background: #C79665;
  color: white;
  border-color: white;
  border-radius: 100%;
  padding: 11px 0 1px 0;
  width: 41px;
  height: 41px;
  text-align: center;
  margin-top: 5px;
}
#item-social-twitter a:hover,
#item-social-fb a:hover {
  color: #797493;
}
#elevator {
  z-index: 500;
}
.navbar-header {
  float: right;
}
.portfolio-item {
  float: right;
  text-align: center;
}
.portfolio-item img {
  margin: 0 auto;
}
.portfolio-item {
  margin-top: 20px;
}
.portfolio-item .caption-content {
  padding: 20px;
  text-align: center;
  font-size: 1.5em;
}
.portfolio-item .caption-text {
  padding-bottom: 20px;
  text-align: center;
}
.caption-text {
  white-space: pre;
}
#about .col-lg-4,
#about .col-lg-2 {
  float: right;
}
.alert .close {
  margin-left: 10px;
}
.social-list {
  padding: 0;
}
.dbtn {
  width: 200px;
  margin: 0 20px;
  direction: ltr;
  position: relative;
}
.dbtn.disabled {
  padding-top: 10px;
  padding-bottom: 26px;
}
.dbtn span {
  position: absolute;
  font-size: 0.7em;
  //color: black;
  bottom: 5px;
  left: 60px;
}
.close-modal {
  direction: ltr;
}
p,
li {
  font-size: 20px;
}
p.small {
  font-size: 16px;
}
a,
a:hover,
a:focus,
a:active,
a.active {
  //color: #5299b6;
  outline: none;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-transform: uppercase;
  font-weight: 700;
  font-family: 'hillel_clmmedium', sans-serif;
}
hr.star-light,
hr.star-primary,
hr.star-secondary {
  padding: 0;
  border: none;
  border-top: solid 5px;
  text-align: center;
  max-width: 250px;
  margin: 25px auto 30px;
}
hr.star-light:after,
hr.star-primary:after,
hr.star-secondary:after {
  content: "\2741";
  font-family: FontAwesome;
  display: inline-block;
  position: relative;
  top: -0.8em;
  font-size: 2em;
  padding: 0 0.25em;
}
hr.star-light {
  border-color: #C79665;
}
hr.star-light:after {
  background-color: #AE5E53;
  color: #C79665;
}
hr.star-primary {
  border-color: #C79665;
}
hr.star-primary:after {
  background-color: #E8E1DC;
  color: #C79665;
}
hr.star-secondary {
  border-color: #CFB7AB;
}
hr.star-secondary:after {
  background-color: #B8A69F;
  color: #CFB7AB;
}
.img-centered {
  margin: 0 auto;
}
header {
  text-align: center;
  background: #AE5E53;
  color: white;
}
header .container {
  padding-top: 100px;
  padding-bottom: 50px;
}
header img {
  display: block;
  margin: 0 auto 20px;
}
header .intro-text .name {
  display: block;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 2em;
}
header .intro-text .skills {
  font-size: 1.25em;
  font-weight: 300;
}
@media (min-width: 768px) {
  header .container {
    padding-top: 200px;
    padding-bottom: 100px;
  }
  header .intro-text .name {
    font-size: 4.75em;
  }
  header .intro-text .skills {
    font-size: 1.75em;
  }
}
@media (min-width: 768px) {
  .navbar-fixed-top {
    padding: 25px 0;
    -webkit-transition: padding 0.3s;
    -moz-transition: padding 0.3s;
    transition: padding 0.3s;
  }
  .navbar-fixed-top .navbar-brand {
    font-size: 3em;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;
  }
  .navbar-fixed-top.navbar-shrink {
    padding: 10px 0;
  }
  .navbar-fixed-top.navbar-shrink .navbar-brand {
    font-size: 1.5em;
  }
}
.navbar {
  text-transform: uppercase;
  font-weight: 700;
}
.navbar a:focus {
  outline: none;
}
.navbar .navbar-nav {
  letter-spacing: 1px;
}
.navbar .navbar-nav li {
  font-size: 1.3em;
}
.navbar .navbar-nav li a:focus {
  outline: none;
}
.navbar-default,
.navbar-inverse {
  border: none;
}
section {
  padding: 100px 0;
}
section h2 {
  margin: 0;
  font-size: 3em;
}
section.success {
  background: #B8A69F;
  color: white;
}
#gallery {
  background: #AE5E53;
  color: white;
}

@media (max-width: 767px) {
    .portfolio-item {
      width: 100%;
    }
  section {
    padding: 75px 0;
  }
  section.first {
    padding-top: 75px;
  }
  #pics .portfolio-item {
    width: 100%;
  }
  .item-social {
    display: none !important;
  }
}
#portfolio .portfolio-item {
  margin: 0 0 15px;
  right: 0;
}
#portfolio .portfolio-item .portfolio-link {
  display: block;
  position: relative;
  max-width: 400px;
  margin: 0 auto;
}
#portfolio .portfolio-item .portfolio-link .caption {
  background: rgba(82, 153, 182, 0.9);
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: all ease 0.5s;
  -webkit-transition: all ease 0.5s;
  -moz-transition: all ease 0.5s;
}
#portfolio .portfolio-item .portfolio-link .caption:hover {
  opacity: 1;
}
#portfolio .portfolio-item .portfolio-link .caption .caption-content {
  position: absolute;
  width: 100%;
  height: 20px;
  font-size: 20px;
  text-align: center;
  top: 50%;
  margin-top: -12px;
  color: white;
}
#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
  margin-top: -12px;
}
#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
  margin: 0;
}
#portfolio * {
  z-index: 2;
}
@media (min-width: 767px) {
  #portfolio .portfolio-item {
    margin: 0 0 30px;
  }
  #maps_btn {
    margin-top: 30px;
  }
}
.btn-outline {
  color: white;
  font-size: 20px;
  border: solid 2px white;
  background: transparent;
  transition: all 0.3s ease-in-out;
  margin-top: 15px;
}
.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active,
.btn-outline.active {
  color: #5299b6;
  background: white;
  border: solid 2px white;
}
.btn-outline-dark {
  color: #5299b6;
  font-size: 20px;
  border: solid 2px #5299b6;
  background: transparent;
  transition: all 0.3s ease-in-out;
  margin-top: 15px;
}
.btn-outline-dark:focus {
  color: #5299b6;
}
.btn-outline-dark:hover,
.btn-outline-dark:active,
.btn-outline-dark.active {
  color: white;
  background: #5299b6;
  border: solid 2px;// #5299b6;
}
.floating-label-form-group {
  position: relative;
  margin-bottom: 0;
  padding-bottom: 0.5em;
  border-bottom: 1px solid #eeeeee;
}
.floating-label-form-group input,
.floating-label-form-group textarea {
  z-index: 1;
  position: relative;
  padding-right: 0;
  padding-left: 0;
  border: none;
  border-radius: 0;
  font-size: 1.5em;
  background: none;
  box-shadow: none !important;
  resize: none;
}
.floating-label-form-group label {
  display: block;
  z-index: 0;
  position: relative;
  top: 2em;
  margin: 0;
  font-size: 0.85em;
  line-height: 1.764705882em;
  vertical-align: middle;
  vertical-align: baseline;
  opacity: 0;
  -webkit-transition: top 0.3s ease,opacity 0.3s ease;
  -moz-transition: top 0.3s ease,opacity 0.3s ease;
  -ms-transition: top 0.3s ease,opacity 0.3s ease;
  transition: top 0.3s ease,opacity 0.3s ease;
}
.floating-label-form-group::not(:first-child) {
  padding-left: 14px;
  border-left: 1px solid #eeeeee;
}
.floating-label-form-group-with-value label {
  top: 0;
  opacity: 1;
}
.floating-label-form-group-with-focus label {
  color: #5299b6;
}
form .row:first-child .floating-label-form-group {
  border-top: 1px solid #eeeeee;
}
footer {
  color: white;
}
footer a {
  color: white;
}
footer a:hover {
  color: white;
}
footer h3 {
  margin-bottom: 30px;
}
footer .footer-above {
  padding-top: 50px;
  background-color: #C79665;
}
footer .footer-col {
  margin-bottom: 50px;
}
footer .footer-below {
  padding: 25px 0;
  background-color: #CFB7AB;
}
.btn-social {
  display: inline-block;
  height: 50px;
  width: 50px;
  border: 2px solid white;
  border-radius: 100%;
  text-align: center;
  font-size: 20px;
  line-height: 51px;
}
.btn:focus,
.btn:active,
.btn.active {
  outline: none;
}
.btn-success {
  background-color: #797493;
  border-color: #797493;
}
.btn-success:hover {
  background-color: #B8A69F;
  border-color: #B8A69F;
}
.scroll-top {
  position: fixed;
  right: 2%;
  bottom: 2%;
  width: 50px;
  height: 50px;
  z-index: 1049;
}
.scroll-top .btn {
  font-size: 20px;
  width: 50px;
  height: 50px;
  border-radius: 100%;
  line-height: 37px;
}
.scroll-top .btn:focus {
  outline: none;
}
.portfolio-modal .modal-content {
  border-radius: 0;
  background-clip: border-box;
  -webkit-box-shadow: none;
  box-shadow: none;
  border: none;
  min-height: 100%;
  padding: 30px 0;
  text-align: center;
}
.portfolio-modal .modal-content h2 {
  margin: 0;
  font-size: 3em;
}
.portfolio-modal .modal-content img {
  margin-bottom: 30px;
}
.portfolio-modal .modal-content .item-details {
  margin: 30px 0;
}
.portfolio-modal .close-modal {
  position: absolute;
  width: 75px;
  height: 75px;
  background-color: transparent;
  top: 25px;
  right: 25px;
  cursor: pointer;
}
.portfolio-modal .close-modal:hover {
  opacity: 0.3;
}
.portfolio-modal .close-modal .lr {
  height: 75px;
  width: 1px;
  //margin-left: 35px;
  background-color: #5299b6;
  transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  /* IE 9 */
  -webkit-transform: rotate(45deg);
  /* Safari and Chrome */
  z-index: 1051;
}
.portfolio-modal .close-modal .lr .rl {
  height: 75px;
  width: 1px;
  //background-color: #5299b6;
  transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  /* IE 9 */
  -webkit-transform: rotate(90deg);
  /* Safari and Chrome */
  z-index: 1052;
}
.portfolio-modal .modal-backdrop {
  opacity: 0;
  display: none;
}
.modal-dialog{
position: absolute;
left: 50%;
margin-left: -312px;
height: 500px;
top: 50%;
margin-top: -250px;
}
.btn-close {
float: left;
}
@media (max-width: 768px) {
  .modal-dialog {
    left: initial;
    top: 0;
    margin-top: 0;
    width: 100%;
  }
  .modal-dialog h3 {
    display: none;
  }
}

